--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "next": "14.2.5",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sweetalert2": "^11.14.5"
   },
   "devDependencies": {
     "axios": "^1.7.7",
+    "bootstrap": "^5.3.3",
     "swr": "^2.2.5"
   }
 }
